--- a/frontend/index.html
+++ b/frontend/index.html
@@ -365,7 +365,7 @@
             <div class="input-group">
                 <label for="name">Full Name</label>
                 <i class="fas fa-user"></i>
-                <input type="text" id="name" name="name" placeholder="Kastro Kiran V" required>
+                <input type="text" id="name" name="name" placeholder="Enter your Name" required>
             </div>
 
             <div class="input-group">
@@ -382,7 +382,7 @@
             <div class="input-group">
                 <label for="email">Email Address</label>
                 <i class="fas fa-envelope"></i>
-                <input type="email" id="email" name="email" placeholder="your@email.com" required>
+                <input type="email" id="email" name="email" placeholder="Enter your Email id" required>
             </div>
 
             <button type="submit" class="next-btn">
