--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1,6 +1,5 @@
-<!-- templates/admin.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en" xml:lang="en">
 <head>
     <title>Admin Dashboard - DevOps Exam</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
