--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<html lang="en" xml:lang="en">
 <html>
 <head>
-    <title>Kastro App</title>
+    <title>DevOps App</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
