--- a/frontend/result.html
+++ b/frontend/result.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
-<html>
 <head>
     <title>Kastro App</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -21,7 +20,7 @@
         }
 
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            font-family: 'Inter', sans-serif;
             background: var(--bg);
             color: var(--text);
             line-height: 1.6;
@@ -100,7 +99,7 @@
             margin-top: 2rem;
             border: 1px solid #e5e7eb;
             display: none;
-            animation: fadeIn 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+            animation: fadeIn 0.6s ease both;
         }
 
         .score-display {
@@ -242,7 +241,7 @@
 
             <p>You scored <strong>{{ (score/15)*100|round(1) }}%</strong> on the exam.</p>
         </div>
-       
+
         <div class="result-footer">
             <p>For detailed answers or questions, please contact the exam administrator.</p>
             <p><a href="/" style="color: var(--primary);"><i class="fas fa-home"></i> Return to Home</a></p>
@@ -268,12 +267,10 @@
             }, 300);
         }
 
-        // Show score immediately if coming from exam submission
         if (window.location.hash === '#score') {
             showScore();
         }
 
-        // Add hover effect to score display
         const scoreDisplay = document.querySelector('.score-display');
         if (scoreDisplay) {
             scoreDisplay.addEventListener('mouseover', function() {
